fix(ServersRefreshIndicator): ensure indicator appears above footer by setting z-index on <main>

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -64,6 +64,8 @@ main {
   width: 100%;
   margin: 0 auto;
   padding: 128px 16px 0 16px;
+  position: relative;
+  z-index: 1;
 }
 
 .container {
